--- a/index.html
+++ b/index.html
@@ -9,12 +9,21 @@
 </head>
 <body>
 
-    <ul id="output"></ul>
-
-    <form id="prompt" action="">
-        <input>
+    <ul></ul>
+    <form action="">
+        <input type="text" name="" id="">
     </form>
+    <!-- <div class="out"></div>
+    <div><h1>Привет!</h1></div>
+    <div id='org_div1'>Текст выше сгенерирован автоматически.</div>
     
+    
+<p>Пожалуйста, щёлкните по флажку.</p>
+
+<form>
+    <input type="checkbox" id="my-checkbox" />
+    <label for="my-checkbox">Checkbox</label>
+</form> -->
     <script src="index.js"></script>
 </body>
 </html>
